<resources>
    <string name="app_name">Nevo - Enhanced SMS</string>
    <string name="captcha_service_name">SMS Captcha Service</string>
    <string name="captcha_service_description">Direct copy captcha on notification and hide captcha on lockscreen</string>
    <string name="captcha_service_notification_channel_name">SMS With Captcha</string>
    <string name="captcha_service_notification_unlocked_action_copy_code_format">Copy %s</string>
    <string name="captcha_service_notification_locked_action_copy_code">Copy Captcha</string>
    <string name="captcha_service_toast_copied_format">%s copied to clipboard</string>

    <string name="subscribe_service_name">Enhanced Subscription SMS</string>
    <string name="subscribe_service_description">Used to lower the priority of subscription SMS notifications</string>
    <string name="subscribe_service_notification_channel_name">SMS With Subscription</string>

    <string name="setting_captcha">Captcha</string>
    <string name="setting_captcha_hide_on_locked_title">Hide on lockscreen</string>
    <string name="setting_captcha_hide_on_locked_summary">Hide the captcha when the device is locked</string>
    <string name="setting_captcha_override_default_action">Override original button</string>
    <string name="setting_captcha_override_default_action_summary">Overwrite SMS notification original button</string>
    <string name="setting_captcha_use_default_pattern">Use built-in regex</string>
    <string name="setting_captcha_use_default_pattern_summary">Use built-in regex to identify&amp;parse captchas</string>
    <string name="setting_captcha_post_copy_action">Post-Copy action</string>
    <string name="setting_captcha_identify_pattern_title">Custom captcha identify regex</string>
    <string name="setting_captcha_identify_pattern_summary">Regex that check if SMS has cpatchas</string>
    <string name="setting_captcha_parse_pattern_title">Custom captcha parse regex</string>
    <string name="setting_captcha_parse_pattern_summary">Parse captchas from the short message</string>
    <string name="setting_captcha_auto_fill">Auto Fill</string>
    <string name="setting_captcha_auto_fill_summary">Show a fill button when input method popup</string>
    <string name="setting_subscribe">Subscription</string>
    <string name="setting_subscribe_identify_pattern">Subscription identify regex</string>
    <string name="setting_subscribe_identify_pattern_summary">Regex that identify subscription-type text messages</string>
    <string name="setting_subscribe_priority">Notification priority</string>
    <string name="setting_subscribe_priority_summary_v26">Your ROM needs to be configured with priority in the notification settings</string>
    <string name="setting_other">Other</string>
    <string name="setting_hide_in_launcher_title">Hide on launcher</string>
    <string name="setting_hide_in_launcher_summary">You can still launch this interface from Nevolution</string>
    <string name="setting_pattern_invalid">Invalid Regular</string>

    <string name="default_value_identify_subscribe_pattern"></string>

    <string name="permission_tips_title">Need SMS Write Permission</string>
    <string name="permission_tips_content">Additional operations are required to grant SMS Write Permission (Not only click grant)</string>
    <string name="permission_tips_cancel">I already know</string>
    <string name="permission_tips_help">View help</string>

    <string name="auto_fill_tips_title">Enable Accessibility Service</string>
    <string name="auto_fill_tips_content">This function required\n   - Accessibility Service\n   - Display over other apps</string>
    <string name="auto_fill_tips_ok">OK</string>
    <string name="auto_fill_tips_enable_toast">Enable "Nevo - Enhanced SMS"</string>

    <string name="missing_nevolution_dialog_title">Missing Nevolution</string>
    <string name="missing_nevolution_dialog_message">This app relies on Nevolution. Must install it first.</string>
    <string name="missing_nevolution_dialog_button">Goto PlayStore</string>

    <string name="setting_source">Source Code</string>
    <string name="setting_source_summary">Source Code URL</string>
    <string name="setting_source_url">https://github.com/Kr328/nevo-decorators-sms-captchas</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_privacy_policy_summary">Privacy Policy URL</string>
    <string name="setting_privacy_policy_url">https://kr328.github.io/nevo-decorators-sms-captchas/privacy_policy</string>

    <string name="auto_fill_service_name">@string/app_name</string>
    <string name="auto_fill_service_description">Captcha auto input service.</string>
    <string name="auto_fill_service_button_format">Fill %s</string>
    <string name="auto_fill_service_not_able_find_node">Cannot find input focus, please paste by yourself</string>

    <string-array name="setting_captcha_post_copy_actions">
        <item>Do nothing</item>
        <item>Mark As Read</item>
        <item>Delete</item>
    </string-array>

    <string-array name="setting_subscribe_priorities">
        <item>Urgent</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="permission_help_page_url">https://kr328.github.io/nevo-decorators-sms-captchas/obtain_permission</string>
</resources>
