<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_captcha">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_captcha_hide_on_locked"
            android:summary="@string/setting_captcha_hide_on_locked_summary"
            android:title="@string/setting_captcha_hide_on_locked_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_captcha_override_default_action"
            android:summary="@string/setting_captcha_override_default_action_summary"
            android:title="@string/setting_captcha_override_default_action" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_captcha_use_default_pattern"
            android:summary="@string/setting_captcha_identify_pattern_summary"
            android:title="@string/setting_captcha_use_default_pattern" />
        <EditTextPreference
            android:key="setting_captcha_identify_pattern"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_captcha_identify_pattern_summary"
            android:title="@string/setting_captcha_identify_pattern_title" />
        <EditTextPreference
            android:key="setting_captcha_parse_pattern"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_captcha_parse_pattern_summary"
            android:title="@string/setting_captcha_parse_pattern_title" />
    </PreferenceCategory>
</PreferenceScreen>